--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
-REACT_APP_API_URI = http://ec2-16-171-150-119.eu-north-1.compute.amazonaws.com:3001
+# REACT_APP_API_URI = http://ec2-16-171-150-119.eu-north-1.compute.amazonaws.com:3001
+REACT_APP_API_URI = http://localhost:3001
+
 
