loalstorage token method changed

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 REACT_APP_API_URI = http://ec2-16-170-211-127.eu-north-1.compute.amazonaws.com:3001
-REACT_APP_API_URI = http://localhost:3001
+# REACT_APP_API_URI = http://localhost:3001
 # http://ec2-16-170-211-127.eu-north-1.compute.amazonaws.com:3001
 
 
